--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ O relacionamento vai além do toque ou da presença física, envolve atenção, 
           <li>O₂ → 2 átomos de oxigênio</li>
         </ul>
         <p>Ligações: covalentes (compartilhamento de elétrons)</p>
-        <img src="/dopamina.jpeg" alt="representação da dopamina" style="width: 300px; height: auto;">   
+        <img src="dopamina.jpeg" alt="representação da dopamina" style="width: 300px; height: auto;">   
       </div>
     </div>
 
