--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ O relacionamento vai além do toque ou da presença física, envolve atenção, 
         <ul>
           <li>Você termina um projeto → dopamina liberada</li>
           <li>Recebe elogios → dopamina</li>
-          <li id="botazin" onclick="tocar2()">Brainrot ou usar redes sociais → estimula (mas pode viciar)</li>
+          <li id="botazin" style="cursos: pointer;" onclick="tocar2()">Brainrot ou usar redes sociais → estimula (mas pode viciar)</li>
         </ul>
         <audio id="brainrot" src="tung-tung-sahur.mp3"></audio>
       </div>
